<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp">
    <EditText
            android:id="@+id/editBaseUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_base_url"/>
    <EditText
            android:id="@+id/editSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_to_search"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:id="@+id/editThreadsNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:inputType="number"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/number_of_threads"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
                android:id="@+id/editScannedUrlsNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:inputType="number"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/max_value_of_scanned_urls"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btnStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/start"/>
        <Button
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:enabled="false"
                android:text="@string/stop"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/laytResult"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"/>
        <TextView
                android:id="@+id/txtFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ListView
                android:id="@+id/lstUrlStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        </ListView>


    </LinearLayout>
</LinearLayout>